Core, Hive: Preserve encrypted commit failure handling